fixing overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -148,6 +148,7 @@ div.top { /* div for top bar with logo and image */
     padding: 2vw;
     border: 0.25vw solid midnightblue;
     overflow: hidden;
+    margin-bottom: 7vh; 
 }
 
 #team {
